add background alert

--- a/client/index.html
+++ b/client/index.html
@@ -143,6 +143,8 @@
                 <div class="h-100 card border-light shadow-sm">
                   <div class="card-body">
                     <div id="warnings" class="alert alert-warning" hidden></div>
+                    <div id="backgroundAlert" class="alert alert-success" hidden>Your results will be emailed to you.</div>
+
                     <div id="results" hidden>
                       <div class="mb-3 text-center">
                         <img id="resultsPlot" src="data:," class="img-fluid" alt="Results Plot" />
