--- a/client/index.html
+++ b/client/index.html
@@ -5,8 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SOCcer - Standardized Occupation Coding for Computer-assisted Epidemiological Research</title>
     <link rel="icon" href="favicon.ico" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="lib/bootstrap@5.3.0/bootstrap.min.css" />
     <link rel="stylesheet" href="soccer.css" />
+    <script src="https://assets.adobedtm.com/f1bfa9f7170c81b1a9a9ecdcc6c5215ee0b03c84/satelliteLib-4b219b82c4737db0e1797b6c511cf10c802c95cb.js" async></script>
+    <script src="https://www.googletagmanager.com/gtag/js?id=UA-62346354-5"async></script>
+    <script>
+      function gtag() { dataLayer.push(arguments); }
+      gtag('js', new Date());
+      gtag('config', 'UA-62346354-5');
+    </script>
   </head>
   <body class="d-flex flex-column vh-100">
     <header class="flex-none-auto">
@@ -622,8 +629,9 @@
       </div>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
+    <script src="lib/bootstrap@5.3.0/bootstrap.min.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script> -->
     <script src="soccer.js"></script>
+    <script>_satellite?.pageBottom();</script>
   </body>
 </html>
