--- a/client/index.html
+++ b/client/index.html
@@ -637,7 +637,7 @@
     </footer>
 
     <script src="lib/bootstrap@5.3.0/bootstrap.min.js"></script>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script> -->
+    <script src="lib/papaparse@5.4.1/papaparse.min.js"></script>
     <script src="soccer.js"></script>
     <script>window?._satellite?.pageBottom();</script>
   </body>
