--- a/client/index.html
+++ b/client/index.html
@@ -80,7 +80,7 @@
 
                 <p>
                   If you publish results that use SOCcer, please reference: Daniel E. Russ, Pabitra Josse, Thomas Remen, Jonathan N. Hofmann, Mark P. Purdue, Jack Siemiatycki, Debra T. Silverman, Yawei Zhang, Jerome Lavoué, Melissa C. Friesen, "Evaluation of the updated SOCcer v2 algorithm for coding free-text job descriptions in three epidemiologic studies", Annals of Work Exposures and Health,
-                  Epub 18 April 2023. Doi: 10.1093/annweh/wxad020.
+                  Epub 18 April 2023. DOI: <a href="https://doi.org/10.1093/annweh/wxad020" target="_blank" rel="noopener noreferrer">10.1093/annweh/wxad020</a>.
                 </p>
                 <button class="btn btn-link p-0 fw-bold" role="button" onclick="window['nav-soccer'].click()">Run SOCcer</button>
               </div>
@@ -112,7 +112,7 @@
                         <p class="mb-0">We recommend using model v2.0, the most recent and more accurate version.</p>
                       </div>
 
-                      <div class="mb-1">
+                      <div class="mb-3">
                         <label for="file" class="form-label me-1">Input File</label>
                         <a href="files/example1.csv" class="fst-italic small" download>Example 1</a>
                         <a href="files/example2.csv" class="fst-italic small" download>Example 2</a>
