--- a/client/index.html
+++ b/client/index.html
@@ -150,8 +150,8 @@
                 <div class="h-100 card border-light shadow-sm">
                   <div class="card-body">
                     <div id="errorAlert" class="alert alert-warning" hidden>
-                      <h2 class="h5">Job Failed</h2>
-                      <p>Your submission could not be processed due to the following error(s):</p>
+                      <h2 class="h5">Failed Validation</h2>
+                      <p>Your input could not be processed due to the following error(s):</p>
                       <div id="errorMessage"></div>
                     </div>
                     <div id="successAlert" class="alert alert-success" hidden>
