add shutdown banner

--- a/client/index.html
+++ b/client/index.html
@@ -15,10 +15,12 @@
       gtag('js', new Date());
       gtag('config', 'UA-62346354-5');
     </script>
+    <script src="https://cbiit.github.io/nci-softwaresolutions-elements/components/include-html.js"></script>
   </head>
   <body class="d-flex flex-column vh-100">
     <header class="flex-none-auto">
       <a href="#main" class="visually-hidden-focusable d-block bg-primary-dark text-light text-center py-1">Skip to main content</a>
+      <include-html src="https://cbiit.github.io/nci-softwaresolutions-elements/banners/government-shutdown.html"></include-html>
       <div class="container py-4">
         <img src="images/nci-logo-full.svg" alt="NCI logo" class="img-fluid" style="max-height: 64px" />
       </div>
