fix safari height issue

--- a/client/index.html
+++ b/client/index.html
@@ -22,7 +22,7 @@
       <a href="#main" class="visually-hidden-focusable d-block bg-primary-dark text-light text-center py-1">Skip to main content</a>
       <include-html src="https://cbiit.github.io/nci-softwaresolutions-elements/banners/government-shutdown.html"></include-html>
       <div class="container py-4">
-        <img src="images/nci-logo-full.svg" alt="NCI logo" class="img-fluid" style="max-height: 64px" />
+        <img src="images/nci-logo-full.svg" alt="NCI logo" class="img-fluid" style="height: 64px; max-height: 64px" />
       </div>
       <div class="bg-primary text-light d-none d-lg-block">
         <div class="container py-1">
