update Help alerts

--- a/client/index.html
+++ b/client/index.html
@@ -519,8 +519,9 @@
                 </ul>
                 <div class="tab-content" id="myTabContent">
                   <div class="tab-pane py-4" id="help-model-1-0" role="tabpanel" aria-labelledby="help-model-1-0-tab" tabindex="0">
-                    <div class="alert alert-info">We recomend use of the most recent version, SOCcer 2.0, which has improved accuracy. SOCcer 1.0 remains enabled for those who used it prior to the update.</div>
-
+                    <div class="alert alert-info">
+                      We recomend use of SOCcerNET, which has improved agreement with expert coders. SOCcer 1.0 remains enabled for those who used it prior to the update.
+                    </div>
                     <h2 class="h5 fw-semibold">Input Format</h2>
                     <p>Currently, the input for SOCcer is a comma-separated file with three columns: job title, SIC, and job tasks. SOCcer strictly enforces the format of the input file. The input file must contain the header line (the case must match also):</p>
                     <blockquote>JobTitle,SIC,JobTask</blockquote>
@@ -596,8 +597,7 @@
                   </div>
                   <div class="tab-pane py-4" id="help-model-1-9" role="tabpanel" aria-labelledby="help-model-1-9-tab" tabindex="0">
                     <div class="alert alert-info">
-                      We recomend use of the most recent version, SOCcer 2.0, which has improved accuracy.
-                      <span class="btn-link text-primary" role="button" onclick="window['nav-models'].click()">See the warning under the Models tab</span>.
+                      We recomend use of SOCcerNET, which has improved agreement with expert coders. SOCcer 1.9 remains enabled for those who used it prior to the update.
                     </div>
                     <h2 class="h5 fw-semibold">Input Format</h2>
                     <p>
@@ -637,6 +637,9 @@
                     </ol>
                   </div>
                   <div class="tab-pane py-4" id="help-model-2-0" role="tabpanel" aria-labelledby="help-model-2-0-tab" tabindex="0">
+                    <div class="alert alert-info">
+                      We recomend use of SOCcerNET, which has improved agreement with expert coders. SOCcer 2.0 remains enabled for those who used it prior to the update.
+                    </div>
                     <h2 class="h5 fw-semibold">Input Format</h2>
                     <p>
                       SOCcer 2.0 requires data in comma separated value (csv) format. The data format requires four variables (ID, job title, SIC, and job task), but only id and job title are necessary to obtain a SOCcer score. Job tasks help improve the performance of the classifier. SIC is no longer part of the classifier, because improvement to the results were small; however, at this time the
@@ -693,7 +696,7 @@
                       studyA-04,Financial Analyst,Analyze financial data and prepare reports<br>
                       studyA-05,Project Manager,Define project scope, goals, and deliverables<br>
                     </blockquote>
-                    <figcaption class="blockquote-footer">These jobs description where created by Generative AI and are not job descriptions of real people.</figcaption>
+                    <figcaption class="blockquote-footer">These jobs description where created by Generative AI and are not job descriptions of actual people.</figcaption>
               
                     <p>
                       If you have any questions, comments, or concerns, send us an e-mail at
