minor text changes + .gitignore .vscode info

--- a/client/index.html
+++ b/client/index.html
@@ -425,7 +425,7 @@
                   </tbody>
                   <tfoot>
                     <tr>
-                      <td colspan="7" class="figure-caption">Table 1: performance of SOCcer model v1 and v2 from <span class="fst-italic">Evaluation of the updated SOCcer v2 algorithm for coding free-text job descriptions in three epidemiologic studies</span>, Annals of Work Exposures and Health, in press, 2023</td>
+                      <td colspan="7" class="figure-caption">Table 1: performance of SOCcerNET, SOCcer 1.0 and 2.0</td>
                     </tr>
                   </tfoot>
                 </table>
@@ -450,7 +450,7 @@
                 <hr />
                 <p>
                   SOCAssign is an application to assist expert review of the top 10 SOCcer assignments for each job description to provide an expert SOC-2010 assignment. SOCAssign will read SOCcer ouput. Before importing, the SOCcer results can be preprocessed to focus the expert review on a subset of job descriptions, such as job descriptions with SOC codes that are tied for the highest score or
-                  that had low SOCcer scores. For each job description, SOCAssign will allow the selection of up to 3 SOC-2010 codes. The code scan be selected from the SOCcer output list, from a list of all SOC-2010 codes, or manually entered. A validation check ensures that only valid SOC-2010 can be entered.
+                  that had low SOCcer scores. For each job description, SOCAssign will allow the selection of up to 3 SOC-2010 codes. The codes can be selected from the SOCcer output list, from a list of all SOC-2010 codes, or manually entered. A validation check ensures that only valid SOC-2010 can be entered.
                 </p>
                 <table class="mb-3">
                   <tbody>
