When the user selects clips, fire the change event

--- a/client/index.html
+++ b/client/index.html
@@ -83,9 +83,9 @@
                 
                 <p>There are several tools in the SOCcer ecosystem:</p>
                 <dl class="row">
-                  <dt class="col-4 col-md-3 col-xl-2"><button class="btn btn-link p-0 fw-bold" role="button" onclick="window['nav-soccernet'].click();document.querySelector('[value=\'soccerNET-1.0.0\']').selected=true">SOCcerNET</button></dt>
+                  <dt class="col-4 col-md-3 col-xl-2"><button class="btn btn-link p-0 fw-bold" role="button" data-model="soccernet" data-model-version="soccerNET-1.0.0">SOCcerNET</button></dt>
                   <dd class="col-8 col-md-9 col-xl-10">The newest version of our occupational coding tool.  Includes opportunity to crosswalk from US SOC 1980, Canadian NOC 2011/2016 and ISCO 1988.</dd>
-                  <dt class="col-4 col-md-3 col-xl-2"><button class="btn btn-link p-0 fw-bold" role="button" onclick="window['nav-soccernet'].click();document.querySelector('[value=\'clips-1.0.0\']').selected=true">CLIPS</button></dt>
+                  <dt class="col-4 col-md-3 col-xl-2"><button class="btn btn-link p-0 fw-bold" role="button" data-model="clips" data-model-version="clips-1.0.0">CLIPS</button></dt>
                   <dd class="col-8 col-md-9 col-xl-10">Industry coding tool for NAICS 2022.</dd>
                   <dt class="col-4 col-md-3 col-xl-2"><button class="btn btn-link p-0 fw-bold" role="button" onclick="window['nav-socassign'].click();">SOCAssign</button></dt>
                   <dd class="col-8 col-md-9 col-xl-10">Tool to aid expert coding of occupations to US SOC-2010.</dd> 
